# uutil-linux

./: Cargo.toml
src/uu/mkswap/: Cargo.toml  mkswap.md
src/uu/mkswap/src/: mkswap.rs
tests/: tests.rs
tests/by-util/: test_mkswap.rs
